# DoctelliGen

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  sample.env
.streamlit/: config.toml
